# platformdirs-cpp

./: CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: setup.sh
.github/workflows/: cmake-workflow-preset-docs.yml  cmake-workflow-preset-test.yml  deploy-pages.yml
cmake/: clang-19.cmake  clang.cmake  gcc.cmake  zig-cc-target-arm64-linux-musl.cmake  zig-cc-target-arm64-macos-none.cmake  zig-cc-target-wasm32-wasi-musl.cmake  zig-cc-target-x86_64-linux-musl.cmake  zig-cc-target-x86_64-macos-none.cmake  zig-cc-target-x86_64-windows-gnu.cmake  zig-cc.cmake
include/: platformdirs.h
include/platformdirs/: api.h  cosmopolitan.h  macos.h  unix.h  version.h  windows.h
src/: api.cpp  cosmopolitan.cpp  cosmopolitan.h  lib.cpp  main.cpp  platformdirs.cpp  platformdirs.h  platformdirs_exe.cpp  utils.cpp  utils.h  version.cpp
src/platformdirs/: api.cpp  api.h  macos.cpp  macos.h  unix.cpp  unix.h  utils.cpp  utils.h  version.cpp  version.h  windows.cpp  windows.h
